Init the entire project and take a rest