@@ -1,3 +1,4 @@
+A=pretzel
 B=pretzelb
 
 VERSION=0.0.1-dev.1
