@@ -5,7 +5,7 @@ go 1.22.4
 require (
 	github.com/alexflint/go-arg v1.5.0
 	github.com/joho/godotenv v1.5.1
-	github.com/uynilo9/logger.go v0.0.1-dev.4
+	github.com/uynilo9/logger.go v0.0.1-dev.5
 )
 
 require (
