@@ -1,2 +1,5 @@
 const args = require('yargs')(process.argv.slice(2)).parse();
-console.log(args);
+if(args.allowed === "false" || args.allowed === undefined)
+    process.exit(1)
+
+console.log(args)
